--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -27,6 +27,10 @@ parameters:
 - name: TestTimeoutInMinutes
   type: number
   default: 30
+- name: GovTest
+  displayName: Run Gov Test
+  type: boolean
+  default: false
 - name: IsTestPipeline
   type: boolean
   default: false
@@ -54,6 +58,9 @@ extends:
       variables:
       - template: /eng/pipelines/templates/variables/image.yml
       - template: /eng/pipelines/templates/variables/globals.yml
+      - ${{ if parameters.GovTest }}:
+        - name: GovTest
+          value: 'true'
       jobs:
       - template: /eng/pipelines/templates/jobs/initialize.yml
         parameters:
@@ -72,6 +79,9 @@ extends:
       variables:
       - template: /eng/pipelines/templates/variables/image.yml
       - template: /eng/pipelines/templates/variables/globals.yml
+      - ${{ if parameters.GovTest }}:
+        - name: GovTest
+          value: 'true'
       jobs:
       - template: /eng/pipelines/templates/jobs/analyze.yml
 
@@ -97,12 +107,16 @@ extends:
         variables:
         - template: /eng/pipelines/templates/variables/image.yml
         - template: /eng/pipelines/templates/variables/globals.yml
+        - ${{ if parameters.GovTest }}:
+          - name: GovTest
+            value: 'true'
         jobs:
         - template: /eng/pipelines/templates/jobs/live-test.yml
           parameters:
             Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.liveTestMatrix']
             MaxParallel: 10
             TimeoutInMinutes: 75
+            GovTest: ${{ parameters.GovTest }}
 
     - ${{ if ne(parameters.PublishTarget, 'none') }}:
       # We only sign if we're going to publish
