Update Resource Health CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -295,10 +295,10 @@
 # ServiceOwners:                        @carldc @philon-msft @xiangyan99
 
 # PRLabel: %tools-ResourceHealth
-/tools/Azure.Mcp.Tools.ResourceHealth/     @pkaza-msft @microsoft/azure-mcp
+/tools/Azure.Mcp.Tools.ResourceHealth/     @shdesmu @microsoft/azure-mcp
 
 # ServiceLabel: %tools-ResourceHealth
-# ServiceOwners:                           @pkaza-msft @microsoft/azure-mcp
+# ServiceOwners:                           @shdesmu @ @microsoft/azure-mcp
 
 # PRLabel: %tools-Search
 /tools/Azure.Mcp.Tools.Search/         @pablocastro @jongio @microsoft/azure-mcp
