--- a/servers/Azure.Mcp.Server/changelog-entries/1768876346795.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1768876346795.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Features Added"
-    description: "Disable external process commands (azqr) in HTTP + On-Behalf-Of mode for security"
+    description: "Disable external process commands (azqr) in HTTP remote mode for security"
