--- a/servers/Azure.Mcp.Server/changelog-entries/1772138538293.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1772138538293.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Features Added"
-    description: "Add App Service Diagnostic get commands (get-catetory, get-analysis, get-detector)"
+    description: "Add App Service Diagnostic get commands (get-category, get-analysis, get-detector)"
