--- a/servers/Azure.Mcp.Server/changelog-entries/1772033017162.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1772033017162.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Features Added"
-    description: "Added appservice_webapps_get command to retrieve details about Web Apps"
+    description: "Added appservice_webapp_get command to retrieve details about Web Apps"
