Copilot SDK Test

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ eng/tools/ToolDescriptionEvaluator/prompts.json
 eng/tools/ToolDescriptionEvaluator/results.md
 eng/tools/ToolDescriptionEvaluator/tools.json
 deploy-log.txt
+
+eng/tools/CopilotCliTester/src/reports/
