--- a/servers/Azure.Mcp.Server/changelog-entries/1772135184661.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1772135184661.yaml
@@ -1,3 +1,3 @@
 changes:
-  - section: "Features Added"
+  - section: "Breaking Changes"
     description: "Consolidated cosmos_account_list, cosmos_database_list, and cosmos_database_container_list commands into a single cosmos_list command"
