--- a/eng/pipelines/templates/jobs/build.yml
+++ b/eng/pipelines/templates/jobs/build.yml
@@ -12,9 +12,12 @@ parameters:
   type: string
 - name: MaxParallel
   type: number
+- name: HostArchitecture
+  type: string
+  default: ''
 
 jobs:
-- job: Build_${{ parameters.OSName }}
+- job: Build_${{ parameters.OSName }}_${{ coalesce(parameters.HostArchitecture, 'x64') }}
   displayName: "Build"
   condition: and(succeeded(), ne(${{ parameters.Matrix }}, '{}'))
   strategy:
@@ -27,6 +30,8 @@ jobs:
     ${{ else }}:
       image: $(OSVmImage)
     os: ${{ parameters.OSName }}
+    ${{ if ne(parameters.HostArchitecture, '') }}:
+      hostArchitecture: ${{ parameters.HostArchitecture }}
 
   # Only run codeql on linux internal build jobs to reduce overall time on pipeline
   ${{ if and(eq(parameters.OSName, 'linux'), eq(variables['System.TeamProject'], 'internal')) }}:
@@ -120,7 +125,7 @@ jobs:
 
   - task: PublishCodeCoverageResults@2
     displayName: "Publish Code Coverage Reports"
-    condition: and(succeededOrFailed(), eq(variables['RunUnitTests'], 'true'), eq('${{ parameters.OSName }}', 'linux'))
+    condition: and(succeededOrFailed(), eq(variables['RunUnitTests'], 'true'), eq(variables['PublishCoverage'], 'true'), eq('${{ parameters.OSName }}', 'linux'))
     inputs:
       summaryFileLocation: $(CoverageFile)
 
