--- a/eng/pipelines/templates/variables/image.yml
+++ b/eng/pipelines/templates/variables/image.yml
@@ -10,10 +10,13 @@ variables:
   - name: MACPOOL
     value: Azure Pipelines
 
+  - name: LINUXARM64POOL
+    value: azsdk-pool-arm64
+
   - name: LINUXVMIMAGE
     value: ubuntu-24.04
-  - name: LINUXARMVMIMAGE
-    value: azure-linux-3-arm64
+  - name: LINUXARM64VMIMAGE
+    value: azsdk-azure-linux3-arm64-1espt
   - name: WINDOWSVMIMAGE
     value: windows-2022
   - name: MACVMIMAGE
